--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -10,3 +10,12 @@ See the CEPH web site at [http://ceph.newdream.net]
 This client only supports the following Operating Systems:
   * Windows Server 2008/Windows Storage Server 2008
   * Windows Server 2008 R2/Windows Storage Server 2008 R2
+
+The goal is to create 3 services that are part of this client
+  * Monitor service
+  * OSD device driver service (poll for new drives, expanded size)
+
+Future plans:
+  * Hyper-V storage driver
+
+Part currently under development: OSD storage device driver
